examples/semantics/errors/error3.grace
fun error3 () : nothing
	var foo : int[10];
	var bar : int;
{
	bar <- foo;
}
